<resources>
    <string name="app_name_user" translatable="false">FESTU Navigator</string>
    <string name="app_name_admin" translatable="false">Navigator Admin</string>
    <string name="initialize">Initialize the graph please</string>
    <string name="scan">Point the camera at the auditorium number</string>
    <string name="orientate_wall">Slowly point the phone at the audience number</string>
    <string name="orientate_floor">Slowly move the phone while pointing it at the floor</string>
    <string name="link" translatable="false">Link</string>
    <string name="delete" translatable="false">Delete</string>
    <string name="entry" translatable="false">Entry</string>
    <string name="path" translatable="false">Path</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="confirm_place">Text was placed correctly?</string>
    <string name="from">Start</string>
    <string name="to">End</string>
    <string name="main">Main building</string>
    <string name="lab">Laboratory</string>
    <string name="first_tower">Tower №1</string>
    <string name="second_tower">Tower №2</string>
    <string name="second_building">Second building</string>
    <string name="floor">floor №</string>
    <string name="incorrect_number">Can`t find that number</string>
    <string name="no_path">No route</string>
    <string name="going">Going to %s</string>
    <string name="init_failed">Initialization failed</string>
    <string name="install_arcode">Please, install ARCore</string>
    <string name="update_arcode">Please, update ARCore</string>
    <string name="update_app">Please, update this app</string>
    <string name="no_arcore_support">This device does not support AR</string>
    <string name="camera_not_available">Camera not available. Try restarting the app</string>
    <string name="failed_to_create_session">Failed to create AR session</string>
    <string name="provide_camera_permission">Please, provide the camera permission</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="entry_already_exists" translatable="false">Entry already exists</string>
    <string name="link_already_exists" translatable="false">Link already exists</string>
    <string name="node_created" translatable="false">Node created</string>
    <string name="node_deleted" translatable="false">Node deleted</string>
    <string name="link_created" translatable="false">Link created</string>
    <string name="start_typing" >Start typing…</string>


</resources>