<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    tools:context=".presentation.confirmer.ConfirmFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/rounded"
        android:orientation="vertical">

        <TextView
            android:id="@+id/confirm_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/confirm_place"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageButton
                android:id="@+id/accept_button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:backgroundTint="#B21E851B"
                android:contentDescription="@string/accept"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_accept"
                app:tint="#FFFFFF" />

            <ImageButton
                android:id="@+id/reject_button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:backgroundTint="#C4D84949"
                android:contentDescription="@string/reject"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_reject"
                app:tint="#FFFFFF" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>