<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    tools:context=".presentation.router.RouterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/rounded"
        android:orientation="vertical"
        android:padding="5dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/admin_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#00FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/delete_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:enabled="true"
                        android:text="@string/delete"
                        android:textSize="14sp" />

                    <Button
                        android:id="@+id/link_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:enabled="true"
                        android:text="@string/link"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/place_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:enabled="true"
                        android:text="@string/path"
                        android:textSize="14sp" />

                    <Button
                        android:id="@+id/entry_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:enabled="true"
                        android:text="@string/entry"
                        android:textSize="14sp" />

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="true"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/from_layout"
                style="@style/CustomBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/from"
                android:padding="10dp"
                android:textAlignment="center"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeWidth="2dp"
                app:boxStrokeWidthFocused="2dp"
                app:errorEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/from_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/to_layout"
                style="@style/CustomBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/to"
                android:padding="10dp"
                android:textAlignment="center"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxStrokeWidth="2dp"
                app:boxStrokeWidthFocused="2dp"
                app:errorEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/to_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/destination_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="Going to: main building, floor №3"
            android:textAlignment="center"
            android:textSize="14sp"
            android:visibility="gone" />
    </LinearLayout>

</FrameLayout>